--- a/app/css/_animation.scss
+++ b/app/css/_animation.scss
@@ -19,7 +19,7 @@
 
 @keyframes animation-title {
     0% {
-        transform: translateX(70px);
+        transform: translateY(70px);
         opacity: 0;
     }
     100% {
