--- a/app/css/blocks/header.scss
+++ b/app/css/blocks/header.scss
@@ -1,5 +1,6 @@
 .header {
-    background-image: url('./../img/fon-top.jpg');
+    position: relative;
+    background: url('./../img/fon-top.jpg');
     height: 608px;
 
     &__wrap {
