--- a/app/css/blocks/bucket.scss
+++ b/app/css/blocks/bucket.scss
@@ -9,6 +9,7 @@
     letter-spacing: 1.1px;
     line-height: 1.0;
     text-decoration: none;
+    color: #fefeff;
 
     &:visited {
         color: #fefeff;
