--- a/app/css/blocks/content.scss
+++ b/app/css/blocks/content.scss
@@ -15,6 +15,7 @@
         background-color: #fff;
         box-shadow: rgba(98, 20, 28, 0.7) 0 0 70px 0;
         margin-right: 25px;
+        color: #911526;
 
         text-decoration: none;
 
