--- a/app/css/blocks/bucket.scss
+++ b/app/css/blocks/bucket.scss
@@ -10,9 +10,20 @@
     line-height: 1.0;
     text-decoration: none;
     color: #fefeff;
+    height: 110px;
+    transition: all 0.4s;
 
     &:visited {
         color: #fefeff;
+    }
+
+    &:hover {
+        background-color: rgba(194, 53, 43, 0.7);
+        box-shadow: inset rgba(255, 255, 255, 0.1) 0 0 70px 0;
+    }
+
+    &:active {
+        box-shadow: inset rgba(0, 0, 0, 0.1) 0 0 20px 0;
     }
 
     &:before {
