--- a/app/css/blocks/main-navigation.scss
+++ b/app/css/blocks/main-navigation.scss
@@ -31,6 +31,14 @@
         &:visited {
             color: #fefeff;
         }
+
+        &:hover {
+            text-shadow: rgba(0, 0, 0, 0.5) 0 0 30px;
+        }
+
+        &:active {
+            text-shadow: rgba(0, 0, 0, 0.5) 0 0 50px;
+        }
     }
 
     &__item {
