--- a/app/css/blocks/main-navigation.scss
+++ b/app/css/blocks/main-navigation.scss
@@ -27,6 +27,7 @@
     &__item a {
         color: #fefeff;
         text-decoration: none;
+        transition: all 0.4s;
 
         &:visited {
             color: #fefeff;
