--- a/app/css/blocks/bucket.scss
+++ b/app/css/blocks/bucket.scss
@@ -1,37 +1,99 @@
 .bucket {
+    font-weight: 400;
     position: relative;
-    width: 120px;
-    font-size: 28px;
+    width: 244px;
     background-color: rgba(194, 53, 43, 1);
-    padding-top: 62px;
-    padding-right: 37px;
-    padding-left: 88px;
+    height: 172px;
+    transition: all 0.4s;
     letter-spacing: 1.1px;
     line-height: 1.0;
-    text-decoration: none;
-    color: #fefeff;
-    height: 110px;
-    transition: all 0.4s;
 
-    &:visited {
+    &__empty {
+        width: 120px;
+        margin-top: 62px;
+        margin-right: 44px;
+        margin-left: 81px;
+        text-decoration: none;
         color: #fefeff;
+        font-size: 28px;
+        display: inline-block;
+        display: none;
+
+        &:visited {
+            color: #fefeff;
+        }
+
+        &:hover {
+        }
+
+        &:active {
+        }
     }
 
-    &:hover {
-        background-color: rgba(194, 53, 43, 0.7);
-        box-shadow: inset rgba(255, 255, 255, 0.1) 0 0 70px 0;
+    &__wrap {
+        //display: none;
+        margin-left: 82px;
     }
 
-    &:active {
-        box-shadow: inset rgba(0, 0, 0, 0.1) 0 0 20px 0;
+    &__prod {
+        margin-top: 39px;
+        margin-bottom: 8px;
+        font-size: 24px;
+        color: #ffe745;
+    }
+
+    &__sum-text {
+        font-size: 13px;
+        margin-top: 0;
+        margin-bottom: 5px;
+    }
+
+    &__sum {
+        color: #fefeff;
+        font-size: 18px;
+        width: 120px;
+        margin-top: 0;
+        margin-bottom: 10px;
+
+    }
+
+    &__link {
+        position: relative;
+        color: #ffe745;
+        font-size: 13px;
+        margin-top: 0;
+        padding-bottom: 1px;
+        text-decoration: none;
+
+
+        &:visited {
+            color: #ffe745;
+        }
+
+        &:hover {
+            border-bottom: 1px solid #ffe745;
+        }
+
+        &:active {
+        }
+
+        &::before {
+            content: '';
+            position: absolute;
+            height: 14px;
+            width: 14px;
+            left: 79px;
+            top: 2px;
+            background-image: url('./../img/up.png');
+        }
     }
 
     &:before {
         content: '';
         height: 27px;
         width: 33px;
-        left: 37px;
-        top: 65px;
+        left: 36px;
+        top: 66px;
         position: absolute;
         background-image: url('./../img/bucket.png');
     }
