--- a/app/css/blocks/logo.scss
+++ b/app/css/blocks/logo.scss
@@ -1,6 +1,6 @@
 .logo {
     //margin-top: 32px;
-    margin-left: 9px;
+    margin-right: 9px;
     box-shadow: rgba(0, 0, 0, 0.7) 0 0 109px 0;
     height: 182px;
 }
