--- a/app/css/blocks/main-navigation.scss
+++ b/app/css/blocks/main-navigation.scss
@@ -24,31 +24,36 @@
         margin-top: 25px;
     }
 
-    &__item a {
+    &__link {
         color: #fefeff;
         text-decoration: none;
         transition: all 0.4s;
+
+        &--active {
+            font-weight: 700;
+            cursor:  default;
+
+            &:hover {
+                text-shadow: rgba(255, 255, 255, 0) 0 0 2px !important;
+            }
+        }
 
         &:visited {
             color: #fefeff;
         }
 
         &:hover {
-            text-shadow: rgba(0, 0, 0, 0.5) 0 0 30px;
+            text-shadow: rgba(255, 255, 255, 1) 0 0 2px;
         }
 
         &:active {
-            text-shadow: rgba(0, 0, 0, 0.5) 0 0 50px;
+            //text-shadow: rgba(0, 0, 0, 0.5) 0 0 50px;
         }
     }
 
     &__item {
         position: relative;
         font-size: 20px;
-
-        &--active {
-            font-weight: 700;
-        }
 
         &:nth-child(1)::before {
                 content: '';
