--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -14,4 +14,5 @@
 @import "./blocks/footer";
 @import "./blocks/content";
 @import "./blocks/author";
+@import "./blocks/kaerus";
 @import "./animation";
