--- a/app/css/blocks/header.scss
+++ b/app/css/blocks/header.scss
@@ -21,6 +21,15 @@
             z-index: 5;
         }
     }
+
+    &__wrap-catalog {
+        position: relative;
+        display: flex;
+        margin: 0 auto;
+        width: 1200px;
+        margin-bottom: 25px;
+    }
+
 }
 
 .header__pizza {
