--- a/app/css/blocks/main-navigation.scss
+++ b/app/css/blocks/main-navigation.scss
@@ -54,6 +54,7 @@
     &__item {
         position: relative;
         font-size: 20px;
+        //font-weight: 700;
 
         &:nth-child(1)::before {
                 content: '';
