--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -4,6 +4,9 @@
 @import "./blocks/header";
 @import "./blocks/logo";
 @import "./blocks/main-navigation";
+@import "./blocks/catalog-navigation";
+@import "./blocks/catalog-content";
+@import "./blocks/main-catalog";
 @import "./blocks/slider";
 @import "./blocks/logo";
 @import "./blocks/about";
