--- a/app/css/_scaffolding.scss
+++ b/app/css/_scaffolding.scss
@@ -1,5 +1,3 @@
-
-
 body {
     background-color: #890000;
     background-image: url('../img/fon.jpg');
@@ -14,3 +12,9 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+.to-uppercase {
+    text-transform: uppercase;
+}
+
+
