--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -18,4 +18,5 @@
 @import "./blocks/content";
 @import "./blocks/author";
 @import "./blocks/kaerus";
+@import "./blocks/pizza-constructor";
 @import "./animation";
