--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -18,5 +18,7 @@
 @import "./blocks/content";
 @import "./blocks/author";
 @import "./blocks/kaerus";
+@import "./blocks/product";
+@import "./blocks/recommendation";
 @import "./blocks/pizza-constructor";
 @import "./animation";
