--- a/app/css/blocks/bucket.scss
+++ b/app/css/blocks/bucket.scss
@@ -90,11 +90,11 @@
 
     &:before {
         content: '';
-        height: 27px;
+        height: 26px;
         width: 33px;
         left: 36px;
         top: 66px;
         position: absolute;
-        background-image: url('./../img/bucket.png');
+        background-image: url('./../img/bucket.svg');
     }
 }
