--- a/app/css/blocks/user.scss
+++ b/app/css/blocks/user.scss
@@ -76,11 +76,11 @@
 
     &:before {
         content: '';
-        height: 27px;
+        height: 26px;
         width: 26px;
         left: 36px;
         top: 66px;
         position: absolute;
-        background-image: url('./../img/user.png');
+        background-image: url('./../img/user.svg');
     }
 }
